# conan-test-cmake

./: CMakeLists.txt  conanfile.py  main.cpp
src/: CMakeLists.txt  main.cpp
